--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,26 @@
 asgiref==3.2.4
+cffi==1.14.2
 Django==2.0
 django-elasticsearch-dsl==0.5.1
 django-elasticsearch-dsl-drf==0.5
 django-nine==0.2.3
+django-socketio==0.3.9
 djangorestframework==3.11.0
 elasticsearch==5.5.3
 elasticsearch-dsl==5.0.0
+gevent==20.6.2
+gevent-socketio==0.2.1
+gevent-websocket==0.10.1
+greenlet==0.4.16
 ipaddress==1.0.23
 mysqlclient==1.4.6
+psycopg2==2.8.4
+pycparser==2.20
 python-dateutil==2.8.1
 pytz==2019.3
 six==1.14.0
+sphinx-me==0.3
 sqlparse==0.3.1
 urllib3==1.25.8
+zope.event==4.4
+zope.interface==5.1.0
